--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Notable&family=Inter:wght@400;500&display=swap');
+
 @tailwind base;
 @tailwind components;
-@font-face {
-  font-family: "Squarely";
-  src: local("Squarely"), url("../fonts/Squarely.ttf") format("ttf");
-}
-
 @tailwind utilities;
